--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <a-scene arjs>
-        <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+        <a-assets>
+            <a-asset-item id="Ghost" src="ghost.gltf"></a-asset-item>
+          </a-assets>
+          <a-entity gltf-model="##tree"></a-entity>
         <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 </body>
