--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a-assets>
             <a-asset-item id="Ghost" src="ghost.gltf"></a-asset-item>
           </a-assets>
-          <a-entity gltf-model="##tree"></a-entity>
+          <a-entity gltf-model="##ghost"></a-entity>
         <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 </body>
