Maj was supposed to be min

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <a-scene arjs>
         <a-assets>
-            <a-asset-item id="Ghost" src="ghost.gltf"></a-asset-item>
+            <a-asset-item id="ghost" src="ghost.gltf"></a-asset-item>
           </a-assets>
           <a-entity gltf-model="##ghost"></a-entity>
         <a-marker-camera preset='hiro'></a-marker-camera>
